releases/v0.4.5/default_bundle/assets/templates/30-结果-AI深审记录模板.md
# AI深审记录模板
| 项目 | 填写内容 |
|------|------|
| 文档角色 | `PRD` 与原型 AI 深审统一记录 |
| 适用范围 | 产品角色在 `YAML` 硬门禁通过后，汇总 `产品审查`、`原型审查`、`反向审查`、`测试审查` 四审结果 |
| 适用阶段 | `PRD 起草 -> PRD 评审` |
| 更新时间 | `2026-04-03` |
## 1. 基本信息
| 字段 | 填写内容 |
|------|------|
| 需求名称 | |
| 需求编号 | |
| 记录日期 | |
| 产品负责人 | |
| `PRD` 版本 | |
| 原型终端类型 | `手机端 / PC端 / 管理后台` |
| 原型文件列表 | |
| 当前状态 | `draft / in_review / approved / frozen / obsolete` |
## 2. 审查执行概览
| 审查项 | 使用 Agent 文件 | 是否已单独运行 | 工单回执是否合格 | 审查结论 | 是否存在阻塞问题 | 记录位置 |
|------|------|------|------|------|------|------|
| 产品审查 | `21-审查-产品审查.agent.md` | `是 / 否` | `是 / 否` | `允许 / 拦截打回` | `是 / 否` | |
| 原型审查 | `22-审查-原型审查.agent.md` | `是 / 否` | `是 / 否` | `允许 / 拦截打回` | `是 / 否` | |
| 反向审查 | `23-审查-反向审查.agent.md` | `是 / 否` | `是 / 否` | `允许 / 拦截打回` | `是 / 否` | |
| 测试审查 | `25-审查-测试专家.agent.md` | `是 / 否` | `是 / 否` | `可跑通 / 不可跑通 / 需补证据` | `是 / 否` | |
- 基础四类审查必须单独运行，禁止混用 Agent 角色；本模板只负责统一落盘，不替代基础四审 Agent 的原始输出。
- 所有已运行的审查结果在汇总前，必须先由总控验收其 `工单回执`；没有回执或回执缺字段，视为无效交接，不得直接汇总收口。
## 2A. 总控复核门禁
| 字段 | 填写内容 |
|------|------|
| 总控复核清单位置 | |
| 是否已先拆强制清单 | `是 / 否` |
| 是否已完成工单回执验收 | `是 / 否` |
| 是否已完成高风险显式结论检查 | `是 / 否` |
| 是否已完成高风险关键词反查 | `是 / 否` |
| 是否已完成子 Agent 报告覆盖对照 | `是 / 否` |
| 当前证据三元组 | `scope / artifact / evidence` |
| 当前最高结论层级 | `单门审查结论 / 基础四审结论 / 模块级绿灯 / 整包可放行` |
| 不可外推层级 | `单门审查结论不得直接外推为模块级绿灯或整包可放行` |
| 总控门禁结论 | `允许进入四审 / 允许进入 final-review closeout / 拦截打回` |
| 说明 | 非闭合回收最小输入：可打开的高保真包 / 页面清单 / 与 PRD、原型不一致的地方；产品确认清单责任人固定为 `10-执行-产品专家`。 |
### 2A.1 已核通过项
| 编号 | 强制检查项 | 适用场景 | 显式结论 | 证据位置 | 备注 |
|------|------|------|------|------|------|
| G-P1 | | | | | |
### 2A.2 已核未通过项
| 编号 | 强制检查项 | 未通过原因 | 严重级别 | 必须补齐动作 | 责任人 | 状态 |
|------|------|------|------|------|------|------|
| G-F1 | | | `阻塞问题 / 警告问题 / 疑问待决` | | | `待处理 / 已关闭 / 风险接受` |
### 2A.3 未覆盖项
| 编号 | 强制检查项 | 未覆盖原因 | 必须补审动作 | 建议回流位置 | 状态 |
|------|------|------|------|------|------|
| G-M1 | | | | | `待补审 / 已补审` |
## 3. 产品审查记录
### 3.1 审查结论
| 字段 | 填写内容 |
|------|------|
| 当前结论层级 | `单门审查结论 / 基础四审结论 / 模块级绿灯 / 整包可放行` |
| 当前复审范围 | `当前单门审查 / 基础四审汇总 / 模块级交付 / 整包交付` |
| 不可外推层级 | `单门审查结论不得直接外推为模块级绿灯或整包可放行` |
| 结论摘要 | |
### 3.1A 五维健壮性防穿透审查摘要
| 字段 | 填写内容 |
|------|------|
| 是否命中高风险场景 | `是 / 否` |
| `4.3 页面合同清单` 是否满足第一真源要求 | `是 / 否` |
| `4.4 结构化契约字段清单` 是否在命中时满足第一真源要求 | `是 / 否 / 不适用` |
| 五维健壮性防穿透审查是否完成 | `是 / 否` |
| 强制清单覆盖是否完整 | `是 / 否` |
| 高风险显式结论缺口 | |
| 未冻结参数 | |
| 原型承接缺口 | |
| 剩余风险 | |
### 3.2 阻塞问题清单
| 问题编号 | 致命影响 | 对应 `PRD` 段落 | 必须修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|
| P-B1 | | | | | `待处理 / 已关闭 / 风险接受` |
### 3.3 警告问题清单
| 问题编号 | 隐患风险 | 对应 `PRD` 段落 | 建议修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|
| P-W1 | | | | | `待处理 / 已关闭 / 风险接受` |
### 3.4 疑问待决项
| 问题编号 | 缺失信息盲区 | 建议确认方与时间节点 | 状态 |
|------|------|------|------|
| P-Q1 | | | `待确认 / 已确认` |
### 3.5 建议修复执行顺序
1. 
2. 
### 交付级产品审查回执
| 字段 | 填写内容 |
|------|------|
| 当前复审范围 | `delivery_readiness` |
| 交付级结论 | `通过 / 拦截打回 / 待补证据` |
| scope_specific_next_hop | |
| 证据锚点 | |
## 3A. 原型底座记录 / 共享资产底座记录
| 字段 | 填写内容 |
|------|------|
| 当前是否命中 `原型底座` | `是 / 否` |
| 当前项目原型底座入口 | |
| 原型底座适用范围与复用判定结果 | |
| 本轮底座复用决策 | `无底座则完整产出 / 有底座则复用并增量补齐 / 底座不兼容则先调整底座` |
| 文字底座说明是否齐备 | `是 / 否` |
| 底座画廊是否齐备 | `是 / 否` |
| 专题缺口清单 | |
| 说明 | |
- 未形成原型底座记录不得外推为模块级绿灯或整包可放行；未形成共享资产底座记录时不得把模块局部组件或 Pattern 外推为项目级默认。
## 4. 原型审查记录
### 4.1 审查结论
| 字段 | 填写内容 |
|------|------|
| 当前结论层级 | `单门审查结论 / 基础四审结论 / 模块级绿灯 / 整包可放行` |
| 当前复审范围 | `当前单门审查 / 基础四审汇总 / 模块级交付 / 整包交付` |
| 不可外推层级 | `单门审查结论不得直接外推为模块级绿灯或整包可放行` |
| 结论摘要 | |
### 4.2 阻塞问题清单
| 问题编号 | 致命影响 | 对应页面或 UI 组件 | 必须修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|
| U-B1 | | | | | `待处理 / 已关闭 / 风险接受` |
### 4.3 警告问题清单
| 问题编号 | 隐患风险 | 对应页面或 UI 组件 | 建议修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|
| U-W1 | | | | | `待处理 / 已关闭 / 风险接受` |
### 4.4 疑问待决项
| 问题编号 | 缺失信息或不明意图 | 建议确认方 | 状态 |
|------|------|------|------|
| U-Q1 | | | `待确认 / 已确认` |
### 4.5 建议修复执行顺序
1. 
2. 
### 交付级原型审查回执
| 字段 | 填写内容 |
|------|------|
| 当前复审范围 | `delivery_readiness` |
| 交付级结论 | `通过 / 拦截打回 / 待补证据` |
| scope_specific_next_hop | |
| 证据锚点 | |
## 4A. UIUE执行与产品收回记录
| 字段 | 填写内容 |
|------|------|
| 当前是否命中 `UI/UE执行与产品收回` | `是 / 否` |
| 当前轮次 `UI/UE` 执行终端 | `手机端 / PC端 / 管理后台 / 多端` |
| 当前产品收回状态 | `未收回 / 收回中 / 已收回 / 已回派产品` |
| 当前产品收回责任人 | |
| UI/UE结构化回执是否齐备 | `是 / 否` |
| 产品验收收回结论 | `直接进入一致性验证 / 需先补 UI/UE / 需先回派 10-执行-产品专家 修改 PRD` |
| PRD / UE / UI 一致性验证结论 | `一致 / 不一致 / 待补料` |
| return_target | `10-执行-产品专家 / 00-编排-总控 / 其他（需说明）` |
| 说明 | |
### 4A.1 UI/UE结构化回执锚点
| 字段 | 填写内容 |
|------|------|
| 回执位置 | |
| 是否覆盖 `改动清单 / 偏离点 / 需改 PRD / 无需改 PRD / 待产品拍板 / 最终交付物清单` | `是 / 否` |
| 若否，缺失项 | |
### 4A.2 产品收回判断
| 字段 | 填写内容 |
|------|------|
| 是否允许直接进入一致性验证 | `是 / 否` |
| 若否，回流目标 | |
| 若回流，最小补齐动作 | |
### 4A.2A 产品确认清单
| 差异编号 | 页面 / 对象 | 当前差异描述 | 产品判断 | 判断理由 | 动作归属 |
|------|------|------|------|------|------|
|  |  |  | `接受 / 必须回修 / 需改 PRD / 待用户拍板` |  | `UI/UE / 10-执行-产品专家 / 用户` |
### 4A.2B 新意图分层记录
| 意图编号（intent_id） | 触发页面 / 对象（trigger_page_or_object） | 新增意图描述（new_intent_description） | 意图分层（intent_layer） | 判断理由（judgement_reason） | 本轮动作（current_round_action） | 后续责任人（followup_owner） |
|------|------|------|------|------|------|------|
|  |  |  | `当前轮吸收 / 当前轮回修 / 下轮再开` |  |  |  |
- 未经用户明确确认的新意图不得写入本表；只能继续追问，并停留在 `machine receipt carrier` 或 `unresolved_items`。
### 4A.3 一致性验证摘要
| 字段 | 填写内容 |
|------|------|
| 已统一项 | |
| 未统一项 | |
| 下一跳 | |
- 未形成产品收回回执不得外推为模块级绿灯或整包可放行。
## 5. 反向审查记录
### 5.1 审查结论
| 字段 | 填写内容 |
|------|------|
| 当前结论层级 | `单门审查结论 / 基础四审结论 / 模块级绿灯 / 整包可放行` |
| 当前复审范围 | `当前单门审查 / 基础四审汇总 / 模块级交付 / 整包交付` |
| 不可外推层级 | `单门审查结论不得直接外推为模块级绿灯或整包可放行` |
| 结论摘要 | |
### 5.2 阻塞问题清单
| 问题编号 | 冲突点 | 对应 `PRD` 描述 | 对应原型现状 | 必须修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|------|
| C-B1 | | | | | | `待处理 / 已关闭 / 风险接受` |
### 5.3 警告问题清单
| 问题编号 | 风险描述 | 对应 `PRD / 原型` 现状 | 建议修正动作 | 责任人 | 状态 |
|------|------|------|------|------|------|
| C-W1 | | | | | `待处理 / 已关闭 / 风险接受` |
### 5.4 疑问待决项
| 问题编号 | 缺失信息盲区 | 建议确认方 | 状态 |
|------|------|------|------|
| C-Q1 | | | `待确认 / 已确认` |
### 5.5 建议修复执行顺序
1. 
2. 
### 交付级反向审查回执
| 字段 | 填写内容 |
|------|------|
| 当前复审范围 | `delivery_readiness` |
| 交付级结论 | `通过 / 拦截打回 / 待补证据` |
| scope_specific_next_hop | |
| 证据锚点 | |
## 5A. 测试审查记录
### 5A.1 审查结论
| 字段 | 填写内容 |
|------|------|
| 主链是否可跑通 | `可跑通 / 不可跑通 / 需补证据` |
| 关键异常链是否可跑通 | `可跑通 / 不可跑通 / 需补证据` |
| 结论依据 | |
| 最小后续动作 | |
### 5A.2 Findings
| 问题编号 | 严重级别 | 链路点位 | 风险说明 | 建议动作 | 状态 |
|------|------|------|------|------|------|
| Q-B1 | `Blocker / Warning / Question` | | | | `待处理 / 已关闭 / 风险接受` |
### 5A.3 风险评估与补测建议
| 高风险链路 | 当前证据状态 | 最小补测建议 | 备注 |
|------|------|------|------|
| T-R1 | `充分 / 不足` | | |
### 交付级测试审查回执
| 字段 | 填写内容 |
|------|------|
| 当前复审范围 | `delivery_readiness` |
| 交付级结论 | `通过 / 拦截打回 / 待补证据` |
| scope_specific_next_hop | |
| 证据锚点 | |
## 6. 问题闭环总表
| 问题编号 | 来源专家 | 严重级别 | 问题摘要 | 责任人 | 处理动作 | 闭环状态 | 证据或链接 |
|------|------|------|------|------|------|------|------|
| P-B1 | 产品专家 | `阻塞问题` | | | | `待处理 / 已关闭 / 风险接受` | |
- `阻塞问题` 未全部关闭前，不允许进入 `PRD 评审`；`警告问题` 如本期不处理，必须明确写入正式问题响应或业务取舍说明。
- `疑问待决项` 如未确认，必须明确责任人与时间点。
## 7. Final Review Evidence Receipt
本节是 final gate 的 canonical carrier。它只承接 `final-review closeout` 生成的 evidence receipt，用于后续 `check_final_delivery_gate.py` 判断最近一次终审证据是否还能复用。
- standing truth 继续只认 `80-完整提交包/00-提交状态.json`
- 本节只记录 final-review evidence receipt，不独立授予“可最终提交”
- canonical carrier 固定为 `30-结果-AI深审记录.md`
<!-- FINAL_REVIEW_EVIDENCE_RECEIPT:BEGIN -->
```json
{
  "schema": "submission_status.final_review_evidence_receipt",
  "schema_version": "v1",
  "generated_at": "2026-04-08T12:34:56Z",
  "bundle_version": "v0.3.5",
  "receipt_id": "fdr-20260408-001",
  "review_batch": "review-2026-04-08",
  "gate_b_mode": "not_required",
  "semantic_boundary": {
    "version": "v0.3.5",
    "judgement_scope": "final_review_evidence_reuse_freshness_only",
    "judges_only_final_review_evidence_reuse_freshness": true,
    "writes_status_truth": false,
    "reruns_sync_submission_status": false
  },
  "delivery_fingerprint": "sha256:...",
  "fingerprint_inputs": [
    {
      "type": "status_truth",
      "path": "80-完整提交包/00-提交状态.json",
      "sha256": "..."
    }
  ],
  "machine_checks": {
    "sync_submission_status": "pass",
    "check_submission_consistency": "pass",
    "check_publish_boundary": "pass"
  },
  "status_truth_snapshot": {
    "phase": "ready_for_human_review",
    "allow_human_review": true,
    "engineering_handoff_required": false,
    "engineering_handoff_ready": false,
    "last_review_batch": "review-2026-04-08"
  },
  "review_refs": [
    "80-完整提交包/03-合并评审记录/30-结果-AI深审记录.md",
    "80-完整提交包/03-合并评审记录/30-结果-AI深审记录.md#3-产品审查记录",
    "80-完整提交包/03-合并评审记录/30-结果-AI深审记录.md#5A-测试审查记录"
  ]
}
```
<!-- FINAL_REVIEW_EVIDENCE_RECEIPT:END -->
## 8. 使用说明
1. 本模板是基础四类 AI 深审的统一记录模板，不替代各审查 Agent 的原始输出。
2. 基础四类审查必须先单独运行，再将结果汇总到本模板。
3. 如果本轮目标是进入 `PRD 评审`，本模板应与问题响应记录、业务取舍说明一起留档。
4. 后续如需把 AI 深审纳入 `YAML` 兜底，可直接基于本模板定义“是否完成审查”“是否存在未闭环阻塞问题”等检查项。
5. `未覆盖项` 未清零前，不允许把本轮 AI 深审判定为已收口。
6. `工单回执是否合格` 为“否”时，不允许把对应审查结果当作可直接汇总的正式输入。
7. `25-审查-测试专家` 是基础四审之一，必须基于 `PRD + 4.3 + 4.4 + 原型` 产出测试用例与可跑通性结论。
8. 若需要判断最近一次终审证据是否还能复用，应在总控固定 `final-review closeout` 后运行 `python3 scripts/check_final_delivery_gate.py --project-root <项目根>`；它只做新鲜度校验，不写 `00-提交状态.json`。
